SMP Suffix + Fix exploit + Import cleanup (1.1.2 release)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '${project.version}'
 main: io.github.arcoda.SCSwap.SCSwap
 api-version: 1.19
 authors: [Arcoda]
-depend: [Multiverse-Core, Multiverse-Portals, LuckPerms]
+depend: [Multiverse-Core, Multiverse-Portals, LuckPerms, NametagEdit]
 description: 'Plugin for Creative/Survival server hybrid'
 website: 'https://github.com/Arcoda/SCSwap'
 commands:
